# mcp-demo

./: AGENTIC_AI_ARCHITECTURE.md  PROMPT_ENGINEERING_README.md  RAG.md  README.md  pyproject.toml  tool_calling.ipynb
chatbot/: .flake8  .gitignore  README.md  main.py  pyproject.toml
chatbot/app/: chatmodel.py  openai.py  stategraph.py
chatbot/app/config/: logger.py  settings.py
chatbot/app/utils/: utils.py
demoagent/gameframework/: main.py  pyproject.toml
demoagent/gameframework/src/core/: action.py  agent.py  agent_language.py  environment.py  memory.py  prompt.py
demoagent/gameframeworkwithtooldecorator/: main.py  pyproject.toml
demoagent/gameframeworkwithtooldecorator/src/core/: action.py  agent.py  goal.py  memory.py  tool.py
demoagent/rag-file-manual-tool-calling/: main.py  pyproject.toml  rag.py  rag_tool_calls.py  rag_tool_calls_tell_file_summary.py
demoagent/rag-file-manual-tool-calling/files/: leave.txt  timings.txt
demoagent/rag-file-manual-tool-calling/files2/: benefits.txt  contract.txt
langchaindemo/: README.md  main.py  pyproject.toml
langchaindemo/app/: model.py  prompt_templates.py  structured_outputs.py  tool_calling.py  tool_execution.py
langchaindemo/app/config/: settings.py
openai/: pyproject.toml
openaidemo/: README.md  agent.py  chat_completions.py  force_tool_use.py  guardrail_agent.py  handsoff_agent.py  handsoff_agent_n_tool_calling.py  image_generator.py  main.py  openai_vector_search_demo.py  output_type_modification.py  pyproject.toml  utils.py
openaidemo/vector_store_demo/: dummy_company_policy.txt
